--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "OUTRAGElib test",
     
-    "version": "dev",
+    "version": "1.0.0",
  	
     "authors": [
         {
